--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
     "git-filter-repo": "^0.0.30",
+    "http-status": "^1.7.4",
     "joi": "^17.13.1",
     "mongoose": "^8.4.0",
     "ts-node-dev": "^2.0.0",
