--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.14",
     "ts-node-dev": "^2.0.0",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
@@ -40,6 +41,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "@types/nodemailer": "^6.4.15",
     "@types/validator": "^13.11.10",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
