--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "ts-node-dev": "^2.0.0",
     "validator": "^13.12.0",
